// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tracklist render when disabled renders the as expected 1`] = `
<List
  divided={true}
  relaxed="very"
>
  <ListItems
    current={
      Object {
        "addedBy": Array [
          Object {
            "addedAt": "2020-01-27T20:19:27.965Z",
            "played": Array [
              Object {
                "at": "2020-01-27T20:20:34.422Z",
              },
            ],
            "user": Object {
              "__v": 0,
              "_id": "1117795953801840xxxxx",
              "fullname": "Duncan Robertson",
              "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
            },
            "votes": Array [
              Object {
                "at": "2020-01-27T20:20:37.904Z",
                "user": Object {
                  "__v": 0,
                  "_id": "1117795953801840xxxxx",
                  "fullname": "Duncan Robertson",
                  "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                },
                "vote": 80,
              },
            ],
          },
        ],
        "album": Object {
          "name": "Ken Dodd",
          "uri": "spotify:album:1D7E2EHMoQM3nP9drEwv7o",
          "year": "1991",
        },
        "artist": Object {
          "name": "Ken Dodd",
          "uri": "spotify:artist:76o4kCpWMmBGl8jIYfRHTk",
        },
        "length": 120000,
        "metrics": Object {
          "plays": 1,
          "votes": 1,
          "votesAverage": 80,
          "votesTotal": 80,
        },
        "name": "Happiness",
        "uri": "spotify:track:1WaBuuaXGwrU4sFvxAjnkf",
        "year": "1991",
      }
    }
    disabled={true}
    onArtistSearch={[MockFunction]}
    onRemove={[MockFunction]}
    tracks={
      Array [
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:19:27.965Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:34.422Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [
                Object {
                  "at": "2020-01-27T20:20:37.904Z",
                  "user": Object {
                    "__v": 0,
                    "_id": "1117795953801840xxxxx",
                    "fullname": "Duncan Robertson",
                    "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                  },
                  "vote": 80,
                },
              ],
            },
          ],
          "album": Object {
            "name": "Ken Dodd",
            "uri": "spotify:album:1D7E2EHMoQM3nP9drEwv7o",
            "year": "1991",
          },
          "artist": Object {
            "name": "Ken Dodd",
            "uri": "spotify:artist:76o4kCpWMmBGl8jIYfRHTk",
          },
          "length": 120000,
          "metrics": Object {
            "plays": 1,
            "votes": 1,
            "votesAverage": 80,
            "votesTotal": 80,
          },
          "name": "Happiness",
          "uri": "spotify:track:1WaBuuaXGwrU4sFvxAjnkf",
          "year": "1991",
        },
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:19:49.207Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:48.148Z",
                },
                Object {
                  "at": "2020-01-27T20:20:44.403Z",
                },
                Object {
                  "at": "2020-01-27T20:20:41.006Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [
                Object {
                  "at": "2020-01-27T20:20:50.355Z",
                  "user": Object {
                    "__v": 0,
                    "_id": "1117795953801840xxxxx",
                    "fullname": "Duncan Robertson",
                    "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                  },
                  "vote": 40,
                },
              ],
            },
          ],
          "album": Object {
            "name": "Chicken Song",
            "uri": "spotify:album:1Ozoc3hrpvwEpwnFkTNOGR",
            "year": "2019",
          },
          "artist": Object {
            "name": "3 Shades",
            "uri": "spotify:artist:5YGwWwsOsMAwDN8mH0hn7M",
          },
          "image": "https://i.scdn.co/image/e0fc5e87ca6e137d4d7ef434f73edbfb4543286b",
          "length": 60000,
          "metrics": Object {
            "plays": 3,
            "votes": 1,
            "votesAverage": 40,
            "votesTotal": 40,
          },
          "name": "Chicken Song",
          "uri": "spotify:track:6BitwTrBfUrTdztRrQiw52",
          "year": "2019",
        },
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:20:27.606Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:46.330Z",
                },
                Object {
                  "at": "2020-01-27T20:20:42.593Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [],
            },
          ],
          "album": Object {
            "name": "I Know Him So Well",
            "uri": "spotify:album:0IZ5JFCiYgS5C4T4GrvHoO",
            "year": "2011",
          },
          "artist": Object {
            "name": "Geraldine McQueen",
            "uri": "spotify:artist:6Q6StrY5Cnns1tXe8rGipt",
          },
          "image": "https://i.scdn.co/image/ab67616d0000b273f5d46038d259167ee9791bee",
          "length": 254000,
          "metrics": Object {
            "plays": 2,
            "votes": 0,
            "votesAverage": 0,
            "votesTotal": 0,
          },
          "name": "I Know Him So Well",
          "uri": "spotify:track:6hp4DW1Z1RInKvO5ijj9nW",
          "year": "2011",
        },
      ]
    }
  />
</List>
`;

exports[`Tracklist render when enabled renders the as expected 1`] = `
<List
  divided={true}
  relaxed="very"
>
  <ListItems
    current={
      Object {
        "addedBy": Array [
          Object {
            "addedAt": "2020-01-27T20:19:27.965Z",
            "played": Array [
              Object {
                "at": "2020-01-27T20:20:34.422Z",
              },
            ],
            "user": Object {
              "__v": 0,
              "_id": "1117795953801840xxxxx",
              "fullname": "Duncan Robertson",
              "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
            },
            "votes": Array [
              Object {
                "at": "2020-01-27T20:20:37.904Z",
                "user": Object {
                  "__v": 0,
                  "_id": "1117795953801840xxxxx",
                  "fullname": "Duncan Robertson",
                  "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                },
                "vote": 80,
              },
            ],
          },
        ],
        "album": Object {
          "name": "Ken Dodd",
          "uri": "spotify:album:1D7E2EHMoQM3nP9drEwv7o",
          "year": "1991",
        },
        "artist": Object {
          "name": "Ken Dodd",
          "uri": "spotify:artist:76o4kCpWMmBGl8jIYfRHTk",
        },
        "length": 120000,
        "metrics": Object {
          "plays": 1,
          "votes": 1,
          "votesAverage": 80,
          "votesTotal": 80,
        },
        "name": "Happiness",
        "uri": "spotify:track:1WaBuuaXGwrU4sFvxAjnkf",
        "year": "1991",
      }
    }
    disabled={false}
    onArtistSearch={[MockFunction]}
    onRemove={[MockFunction]}
    tracks={
      Array [
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:19:27.965Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:34.422Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [
                Object {
                  "at": "2020-01-27T20:20:37.904Z",
                  "user": Object {
                    "__v": 0,
                    "_id": "1117795953801840xxxxx",
                    "fullname": "Duncan Robertson",
                    "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                  },
                  "vote": 80,
                },
              ],
            },
          ],
          "album": Object {
            "name": "Ken Dodd",
            "uri": "spotify:album:1D7E2EHMoQM3nP9drEwv7o",
            "year": "1991",
          },
          "artist": Object {
            "name": "Ken Dodd",
            "uri": "spotify:artist:76o4kCpWMmBGl8jIYfRHTk",
          },
          "length": 120000,
          "metrics": Object {
            "plays": 1,
            "votes": 1,
            "votesAverage": 80,
            "votesTotal": 80,
          },
          "name": "Happiness",
          "uri": "spotify:track:1WaBuuaXGwrU4sFvxAjnkf",
          "year": "1991",
        },
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:19:49.207Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:48.148Z",
                },
                Object {
                  "at": "2020-01-27T20:20:44.403Z",
                },
                Object {
                  "at": "2020-01-27T20:20:41.006Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [
                Object {
                  "at": "2020-01-27T20:20:50.355Z",
                  "user": Object {
                    "__v": 0,
                    "_id": "1117795953801840xxxxx",
                    "fullname": "Duncan Robertson",
                    "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                  },
                  "vote": 40,
                },
              ],
            },
          ],
          "album": Object {
            "name": "Chicken Song",
            "uri": "spotify:album:1Ozoc3hrpvwEpwnFkTNOGR",
            "year": "2019",
          },
          "artist": Object {
            "name": "3 Shades",
            "uri": "spotify:artist:5YGwWwsOsMAwDN8mH0hn7M",
          },
          "image": "https://i.scdn.co/image/e0fc5e87ca6e137d4d7ef434f73edbfb4543286b",
          "length": 60000,
          "metrics": Object {
            "plays": 3,
            "votes": 1,
            "votesAverage": 40,
            "votesTotal": 40,
          },
          "name": "Chicken Song",
          "uri": "spotify:track:6BitwTrBfUrTdztRrQiw52",
          "year": "2019",
        },
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:20:27.606Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:46.330Z",
                },
                Object {
                  "at": "2020-01-27T20:20:42.593Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [],
            },
          ],
          "album": Object {
            "name": "I Know Him So Well",
            "uri": "spotify:album:0IZ5JFCiYgS5C4T4GrvHoO",
            "year": "2011",
          },
          "artist": Object {
            "name": "Geraldine McQueen",
            "uri": "spotify:artist:6Q6StrY5Cnns1tXe8rGipt",
          },
          "image": "https://i.scdn.co/image/ab67616d0000b273f5d46038d259167ee9791bee",
          "length": 254000,
          "metrics": Object {
            "plays": 2,
            "votes": 0,
            "votesAverage": 0,
            "votesTotal": 0,
          },
          "name": "I Know Him So Well",
          "uri": "spotify:track:6hp4DW1Z1RInKvO5ijj9nW",
          "year": "2011",
        },
      ]
    }
  />
</List>
`;

exports[`Tracklist tracklist but nothing cued up does not mark anything as current 1`] = `
<List
  divided={true}
  relaxed="very"
>
  <ListItems
    onArtistSearch={[MockFunction]}
    onRemove={[MockFunction]}
    tracks={
      Array [
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:19:27.965Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:34.422Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [
                Object {
                  "at": "2020-01-27T20:20:37.904Z",
                  "user": Object {
                    "__v": 0,
                    "_id": "1117795953801840xxxxx",
                    "fullname": "Duncan Robertson",
                    "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                  },
                  "vote": 80,
                },
              ],
            },
          ],
          "album": Object {
            "name": "Ken Dodd",
            "uri": "spotify:album:1D7E2EHMoQM3nP9drEwv7o",
            "year": "1991",
          },
          "artist": Object {
            "name": "Ken Dodd",
            "uri": "spotify:artist:76o4kCpWMmBGl8jIYfRHTk",
          },
          "length": 120000,
          "metrics": Object {
            "plays": 1,
            "votes": 1,
            "votesAverage": 80,
            "votesTotal": 80,
          },
          "name": "Happiness",
          "uri": "spotify:track:1WaBuuaXGwrU4sFvxAjnkf",
          "year": "1991",
        },
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:19:49.207Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:48.148Z",
                },
                Object {
                  "at": "2020-01-27T20:20:44.403Z",
                },
                Object {
                  "at": "2020-01-27T20:20:41.006Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [
                Object {
                  "at": "2020-01-27T20:20:50.355Z",
                  "user": Object {
                    "__v": 0,
                    "_id": "1117795953801840xxxxx",
                    "fullname": "Duncan Robertson",
                    "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
                  },
                  "vote": 40,
                },
              ],
            },
          ],
          "album": Object {
            "name": "Chicken Song",
            "uri": "spotify:album:1Ozoc3hrpvwEpwnFkTNOGR",
            "year": "2019",
          },
          "artist": Object {
            "name": "3 Shades",
            "uri": "spotify:artist:5YGwWwsOsMAwDN8mH0hn7M",
          },
          "image": "https://i.scdn.co/image/e0fc5e87ca6e137d4d7ef434f73edbfb4543286b",
          "length": 60000,
          "metrics": Object {
            "plays": 3,
            "votes": 1,
            "votesAverage": 40,
            "votesTotal": 40,
          },
          "name": "Chicken Song",
          "uri": "spotify:track:6BitwTrBfUrTdztRrQiw52",
          "year": "2019",
        },
        Object {
          "addedBy": Array [
            Object {
              "addedAt": "2020-01-27T20:20:27.606Z",
              "played": Array [
                Object {
                  "at": "2020-01-27T20:20:46.330Z",
                },
                Object {
                  "at": "2020-01-27T20:20:42.593Z",
                },
              ],
              "user": Object {
                "__v": 0,
                "_id": "1117795953801840xxxxx",
                "fullname": "Duncan Robertson",
                "picture": "https://lh3.googleusercontent.com/a-/AAuE7mA6MSypnscAYS2lpAz-cKY1xnT3K-HUmzgpV8xExw=s96-c",
              },
              "votes": Array [],
            },
          ],
          "album": Object {
            "name": "I Know Him So Well",
            "uri": "spotify:album:0IZ5JFCiYgS5C4T4GrvHoO",
            "year": "2011",
          },
          "artist": Object {
            "name": "Geraldine McQueen",
            "uri": "spotify:artist:6Q6StrY5Cnns1tXe8rGipt",
          },
          "image": "https://i.scdn.co/image/ab67616d0000b273f5d46038d259167ee9791bee",
          "length": 254000,
          "metrics": Object {
            "plays": 2,
            "votes": 0,
            "votesAverage": 0,
            "votesTotal": 0,
          },
          "name": "I Know Him So Well",
          "uri": "spotify:track:6hp4DW1Z1RInKvO5ijj9nW",
          "year": "2011",
        },
      ]
    }
  />
</List>
`;

exports[`Tracklist tracklist has track with no addedBy data does nothing 1`] = `
<List
  divided={true}
  relaxed="very"
>
  <ListItems
    onArtistSearch={[MockFunction]}
    onRemove={[MockFunction]}
    tracks={
      Array [
        Object {
          "album": Object {
            "name": "Ken Dodd",
            "uri": "spotify:album:1D7E2EHMoQM3nP9drEwv7o",
            "year": "1991",
          },
          "artist": Object {
            "name": "Ken Dodd",
            "uri": "spotify:artist:76o4kCpWMmBGl8jIYfRHTk",
          },
          "length": 120000,
          "metrics": Object {
            "plays": 1,
            "votes": 1,
            "votesAverage": 80,
            "votesTotal": 80,
          },
          "name": "Happiness",
          "uri": "spotify:track:1WaBuuaXGwrU4sFvxAjnkf",
          "year": "1991",
        },
      ]
    }
  />
</List>
`;
